# touch-control

./: Cargo.toml
front/: index.html  package.json  tsconfig.json  vite.config.ts
front/.github/workflows/: main.yml
front/src/: index.css  index.tsx
front/src/App/AppStore/: constants.ts  context.ts  index.tsx  interfaces.ts  store.ts
front/src/App/WSClient/: context.tsx  index.tsx  interfaces.ts  store.ts
front/src/UI/ActionButton/: index.tsx  style.module.css
front/src/UI/Button/: index.tsx  interfaces.ts  style.module.css
front/src/UI/Icon/: index.tsx  interfaces.ts  style.module.css
front/src/UI/Input/: index.tsx  style.module.css
front/src/UI/LayoutListItem/: index.tsx  interfaces.ts  style.module.css
front/src/UI/Pane/: index.tsx  interfaces.ts  style.module.css
front/src/UI/Toggle/: index.tsx  interfaces.ts  style.module.css
front/src/activities/Layout/: index.tsx
front/src/activities/Layouts/: index.tsx
front/src/activities/Start/: index.tsx
front/src/commands/: index.ts  keyHold.ts  keyPress.ts
front/src/common/: types.ts
front/src/components/Control/: index.tsx  interfaces.ts  style.module.css
front/src/components/LayoutNotFound/: index.tsx
front/src/modules/Layout/: index.tsx  interfaces.ts
front/src/modules/Layouts/: index.tsx
front/src/modules/Logger/: context.tsx  index.tsx  interfaces.ts  style.module.css
front/src/modules/Login/: index.tsx
front/src/modules/Navbar/: index.tsx  style.module.css
front/src/modules/StatusBar/: index.tsx  style.module.css
src/: commands.rs  handlers.rs  main.rs  ws.rs
(+6 files in other folders)
