[package]
name = "touch-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = { version = "0.3", default-features=false}
vigem-client = "0.1.4"
winapi = { version = "0.3.9", features = ["winuser"] }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
inputbot = { git = "https://github.com/obv-mikhail/InputBot.git", branch = "develop", version = "0.6.0" }
clap = { version = "4.4.11", features = ["derive"] }
local-ip-address = "0.5.6"
